add map component to page-2.mdx
crashes during first gatsby develop
which can be fixed by deleting content of .cache/gatsby-mdx/

--- a/src/pages/page-2.mdx
+++ b/src/pages/page-2.mdx
@@ -1,11 +1,18 @@
-import { Link } from 'gatsby'
-import Layout from '../components/layout'
-import SEO from '../components/seo'
+import { Link } from "gatsby";
+import Layout from "../components/layout";
+import SEO from "../components/seo";
+import Map from "../components/map.js";
 
 <SEO title="Page two" />
 
 # Hi from the second page
 
 Welcome to page 2
+
+# Map
+
+<Map />
+
+after map
 
 <Link to="/">Go back to the homepage</Link>
